# fusion-prime-core

./: .env.dev  .gcloudignore  .gitignore  .pre-commit-config.yaml  BRIDGE_MODULE_SUMMARY.md  COMPETITIVE_ANALYSIS_AND_ROADMAP.md  CROSSCHAIN_SYNC_STATUS_AND_OPTIONS.md  CROSSCHAIN_VAULT_SPEC.md  DEPLOYMENT_STATUS.md  DOCUMENTATION_INDEX.md  Dockerfile.migrations  ENVIRONMENTS.md  LICENSE  Makefile  QUICKSTART.md  QUICK_FIX_LOGIN.md  README.md  SETTLEMENT_INTEGRATION_BUG_REPORT.md  SPRINT_03_FINAL_STATUS.txt  SPRINT_09_COMPLETION_SUMMARY.md  SPRINT_10_COMPLETION_SUMMARY.md  SPRINT_10_FINAL.md  TESTING.md  TEST_SUITE_FINAL_STATUS.md  cloudbuild-deploy.yaml  cloudbuild-migrations.yaml  cloudbuild.yaml  docker-compose.ci.yml  docker-compose.yml  dprint.json  env.dev.example  env.local.example  env.multi-chain.example  env.production.example  foundry.toml  mypy.ini  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  (+1 more)
services/compliance/: Dockerfile  PERSONA_INTEGRATION.md  cloudbuild.yaml  pyproject.toml  requirements.txt
services/compliance/alembic/: env.py
services/compliance/alembic/versions/: 002_add_persona_identity_fields.py
services/compliance/app/: __init__.py  dependencies.py  main.py
services/compliance/app/core/: __init__.py  compliance_engine.py  compliance_engine.py.backup  compliance_engine_production.py  identity_engine.py
services/compliance/app/integrations/: __init__.py  persona_client.py
services/compliance/app/middleware/: __init__.py  (+1 more)
services/compliance/tests/: __init__.py  test_compliance.py  test_compliance_engine_production.py  test_health.py  test_identity.py  test_integration.py
services/settlement/: .dockerignore  Dockerfile  README.md  alembic.ini  cloudbuild.yaml  manage-secrets.sh  pyproject.toml  skaffold.yaml
services/settlement/alembic/: env.py
services/settlement/app/: __init__.py  dependencies.py  main.py
services/settlement/domain/: __init__.py  commands.py  webhooks.py
services/settlement/tests/: test_commands.py  test_health.py  test_integration.py  test_integration_pubsub.py  test_observability.py  test_pubsub_consumer.py  test_pubsub_e2e.py  test_webhook_delivery.py  test_webhooks.py
(+1106 files in other folders)
