[tool.poetry]
name = "compliance-service"
version = "0.1.0"
description = "Fusion Prime compliance microservice"
authors = ["Fusion Prime Team <dev@fusionprime.local>"]
# readme = "README.md"
packages = [
  { include = "app" }
]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.0"
uvicorn = { version = "^0.38.0", extras = ["standard"] }
pydantic = "^2.12.0"
sqlalchemy = "^2.0.0"
psycopg2-binary = "^2.9.0"
alembic = "^1.13.0"
google-cloud-pubsub = "^2.18.0"
google-cloud-logging = "^3.8.0"
google-cloud-secret-manager = "^2.18.0"
httpx = "^0.25.0"
requests = "^2.31.0"
pandas = "^2.1.0"
numpy = "^1.24.0"
python-multipart = "^0.0.6"
python-jose = { version = "^3.3.0", extras = ["cryptography"] }
passlib = { version = "^1.7.4", extras = ["bcrypt"] }
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
httpx = "^0.25.0"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"
